fix class loader